# TensorRSVD

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  api_reference.html  backends.html  core.html  gaussian_example.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  theory.html  user_guide.html
.doctrees/: api_reference.doctree  backends.doctree  core.doctree  gaussian_example.doctree  index.doctree  installation.doctree  theory.doctree  user_guide.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/tensorrsvd/: api.html  backends.html
_modules/tensorrsvd/core/: matricization.html  rsvd.html
_sources/: api_reference.rst.txt  core.rst.txt  gaussian_example.rst.txt  index.rst.txt  installation.rst.txt  theory.rst.txt  user_guide.rst.txt
docs/Theory/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
docs/source/: api_reference.rst  backends.rst  conf.py  core.rst  gaussian_example.rst  index.rst  installation.rst  theory.rst  user_guide.rst
src/tensorrsvd/: __init__.py  api.py
src/tensorrsvd/backends/: __init__.py
src/tensorrsvd/core/: __init__.py  matricization.py  rsvd.py
tests/: conftest.py  test_backends.py  test_gaussian_tensor.py  test_ho_rsvd.py  test_ho_svd_r.py  test_matricization.py  test_rsvd.py
