[project]
name = "tensorrsvd"
version = "0.1.0"
description = "Tensor-free randomized HOSVD (randomized Tucker decomposition)"
readme = "README.md"
authors = [
    { name = "Paul Virally", email = "pvirally@gmail.com" }
]
requires-python = ">=3.14"
license = "MIT"
keywords = ["tensor", "tucker", "randomized svd", "hosvd", "scientific computing", "numpy", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.2",
    "pylops>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/PaulVirally/TensorRSVD"
Documentation = "https://tensorrsvd.readthedocs.io"
Repository = "https://github.com/PaulVirally/TensorRSVD"
Issues = "https://github.com/PaulVirally/TensorRSVD/issues"

[build-system]
requires = ["uv_build>=0.9.27,<0.11"]
build-backend = "uv_build"

[project.optional-dependencies]
jax = ["jax>=0.9.0.1"]
jaxcuda12 = ["jax[cuda12]>=0.9.0.1"]
jaxcuda13 = ["jax[cuda13]>=0.9.0.1"]
cupy = ["cupy>=12.0.0"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "mypy>=1.15.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "jax: tests requiring JAX",
    "cupy: tests requiring CuPy",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tensorrsvd"]

[tool.mypy]
files = ["src/tensorrsvd"]
python_version = "3.14"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false   # backends returns untyped callables from optional deps

[[tool.mypy.overrides]]
# backends dynamically dispatches to untyped optional libraries (jax, cupy)
module = "tensorrsvd.backends"
ignore_errors = true

[[tool.mypy.overrides]]
# ArrayLike is intentionally broad in the public API; mypy can't narrow it
module = "tensorrsvd.api"
disable_error_code = ["arg-type", "index", "return-value"]
